fix spacing between social media elements

--- a/style/index.css
+++ b/style/index.css
@@ -159,6 +159,12 @@ footer .button {
 	margin: 0 auto;
 }
 
+.social {
+	display: flex;
+	justify-content: space-around;
+	margin-top: 2em;
+}
+
 .fa {
 	color: #000;
 }
